fix some layout defects on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -299,6 +299,9 @@ header {
       div.address {
         padding-top: 15px;
         text-align: left;
+        @include breakpoint(small only) {
+          text-align:: center;
+        }
         p {
           display: inline-block;
           font-family: 'Source Code Pro', monospace;
@@ -312,13 +315,17 @@ header {
       }
       div.geth-instruction {
         text-align: left;
+        max-width: 700px;
         pre {
           padding-top: 20px;
           code {
             line-height: 30px;
             font-family: 'Source Code Pro', monospace;
-            max-width: 700px;
           }
+        }
+        @include breakpoint(small only) {
+          margin-left: -10px;
+          max-width: 100vw;
         }
       }
       div.wallet-instruction {
@@ -472,6 +479,10 @@ main {
       padding-bottom: 0;
       list-style: square url("/images/bullet.svg");
       color: $callForDonationTextColor;
+      @include breakpoint(small only) {
+        padding-left: 40px;
+        padding-right: 10px;
+      }
     }
 
     ul.point-body.more-padding-bot {
